# sm64coopdx-ios

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
lib/lua-5.3.6/src/: loslib.c
patches/: sdl2-ios-gamepad-fix.patch
platform/ios/: AppDelegate.m  Info.plist  project.yml
platform/ios/sm64coopdx-ios.xcodeproj/: project.pbxproj
platform/ios/sm64coopdx-ios.xcodeproj/project.xcworkspace/xcuserdata/leo.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/sm64coopdx-ios.xcodeproj/xcuserdata/leo.xcuserdatad/xcschemes/: xcschememanagement.plist
src/game/: bettercamera.inc.h
src/pc/: configfile.c  configfile.h  loading.c  pc_main.c  platform.c  platform.h  platform_ios.m  rom_checker.cpp  update_checker.c
src/pc/controller/: controller_entry_point.c  controller_sdl2.c
src/pc/djui/: djui.c  djui_interactable.c  djui_panel_controls.c  djui_panel_display.c  djui_panel_misc.c  djui_panel_sound.c
src/pc/gfx/: gfx_sdl2.c
src/pc/network/: version.h
src/pc/network/coopnet/: coopnet.c
textures/touchcontrols/: touch_button.rgba16.inc.c  touch_button_a.rgba16.inc.c  touch_button_a_pressed.rgba16.inc.c  touch_button_b.rgba16.inc.c  touch_button_b_pressed.rgba16.inc.c  touch_button_c_down.rgba16.inc.c  touch_button_c_down_pressed.rgba16.inc.c  touch_button_c_left.rgba16.inc.c  touch_button_c_left_pressed.rgba16.inc.c  touch_button_c_pressed.rgba16.inc.c  touch_button_c_right.rgba16.inc.c  touch_button_c_right_pressed.rgba16.inc.c  touch_button_c_up.rgba16.inc.c  touch_button_c_up_pressed.rgba16.inc.c  touch_button_chat.rgba16.inc.c  touch_button_chat_pressed.rgba16.inc.c  touch_button_console.rgba16.inc.c  touch_button_console_pressed.rgba16.inc.c  touch_button_dpad_down.rgba16.inc.c  touch_button_dpad_down_pressed.rgba16.inc.c  touch_button_dpad_left.rgba16.inc.c  touch_button_dpad_left_pressed.rgba16.inc.c  touch_button_dpad_right.rgba16.inc.c  touch_button_dpad_right_pressed.rgba16.inc.c  touch_button_dpad_up.rgba16.inc.c  touch_button_dpad_up_pressed.rgba16.inc.c  touch_button_l.rgba16.inc.c  touch_button_l_pressed.rgba16.inc.c  touch_button_playerlist.rgba16.inc.c  touch_button_playerlist_pressed.rgba16.inc.c  touch_button_r.rgba16.inc.c  touch_button_r_pressed.rgba16.inc.c  touch_button_start.rgba16.inc.c  touch_button_start_pressed.rgba16.inc.c  touch_button_x.rgba16.inc.c  touch_button_x_pressed.rgba16.inc.c  touch_button_y.rgba16.inc.c  touch_button_y_pressed.rgba16.inc.c  touch_button_z.rgba16.inc.c  touch_button_z_pressed.rgba16.inc.c  (+2 more)
